--- a/sugo-nav/app/views/layouts/application.html.erb
+++ b/sugo-nav/app/views/layouts/application.html.erb
@@ -7,8 +7,18 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<header class="navbar navbar-default" role="navigation">
+	<div class="containr">
+		<div class="navbar-header">
+			<%= link_to 'すごい就職ナビ', root_path, class: 'navbar-brand' %>
+		</div>
+	</div>
+</header>
 
-<%= yield %>
+<div class="container">
+	<%= yield %>
+</div>
+
 
 </body>
 </html>
