--- a/sugo_nav/festanavi/app/views/welcome/index.html.erb
+++ b/sugo_nav/festanavi/app/views/welcome/index.html.erb
@@ -3,5 +3,7 @@
 <%= link_to '登録', new_user_registration_path %>
 <%= link_to 'Facebookで登録', user_omniauth_authorize_path(:facebook) %>
 <%= link_to 'Twitterで登録', user_omniauth_authorize_path(:twitter) %>
+<%= link_to '会社新規', company_registration_path %>
+<%= link_to '会社ログイン', new_company_session_path %>
 
 
